--- a/estilo.scss
+++ b/estilo.scss
@@ -2,10 +2,7 @@
 
 /********** INITIALS **********/
 
-:root {
-    --accent: #7700ff;
-
-}
+$accent: #7700ff;
 
 * {
     margin: 0;
@@ -23,16 +20,15 @@ body {
     background-color: #fcfbff;
     display: flex;
     justify-content: center;
-    transition: all 500ms;
 }
 
 body::-webkit-scrollbar {
-    width: 7px;
+    width: 9px;
 }
 
 body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    background-color: #7700ff;
+    border-radius: 11px;
+    background-color: $accent;
 }
 
 body::-webkit-scrollbar-track {
@@ -55,7 +51,7 @@ header {
     top: 0;
     z-index: 999;
     background-color: #fcfbff;
-    box-shadow: 1px 1px 5px hsla(268, 100%, 50%, 0.502);
+    box-shadow: 1px 1px 5px hsla(268, 100%, 50%, 0.500);
     max-width: 1120px;
     width: 100%;
 }
@@ -73,7 +69,7 @@ a {
 }
 
 a:hover {
-    color: var(--accent);
+    color: $accent;
 }
 
 section#home {
@@ -97,7 +93,7 @@ section#home {
     border: none;
     width: 150px;
     padding: 10px;
-    background-color: #7700ff;
+    background-color: $accent;
     color: white;
     font-size: 18px;
     cursor: pointer;
@@ -123,12 +119,12 @@ section#home {
 .home-img img {
     width: 200px;
     height: 200px;
-    animation: float 1s ease-in-out infinite;
+    animation: float 5s ease-in-out infinite; //////////////////////////////////////////////////////////////////////
     box-shadow: 0 5px 10px gray;
     border-radius: 50%;
 }
 
-@keyframes float {
+@keyframes float { ///////////////////////////////////////////////////////////////////////
     0% {
         transform: translateY(0);
     }
@@ -143,7 +139,7 @@ section#projects {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    align-content: center;
+    align-content: center; //////////////////////////////////////////////////////////////////////////////////////
     justify-content: center;
 }
 
@@ -153,7 +149,7 @@ section#projects {
 
 .project-img img {
     box-shadow: 0 1px 2px #0003;
-    object-fit: cover;
+    object-fit: cover; //////////////////////////////////////////////////////////////////////////////////////////////
     width: 80%;
 }
 
@@ -179,11 +175,11 @@ section#projects {
 
 .swiper-button-next,
 .swiper-button-prev {
-    color: #7700ff;
+    color: $accent;
 }
 
 .swiper-pagination-bullet-active {
-    background-color: #7700ff;
+    background-color: $accent;
 }
 
 /* CONTACT */
@@ -212,12 +208,12 @@ input, textarea, button {
     border: none;
     padding: 10px;
     border-radius: 5px;
-    outline: none;
-    resize: none;
+    outline: none; ///////////////////////////////////////////////////////////
+    resize: none; //////////////////////////////////////////////////////////////////////////////
 }
 
 #contact form button {
-    background-color: #7700ff;
+    background-color: $accent;
     color: white;
     font-size: 18px;
     cursor: pointer;
