--- a/estilo.css
+++ b/estilo.css
@@ -24,13 +24,35 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
   border-radius: 11px;
-  background-color: #7700ff;
+  background-color: gray;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  -webkit-animation: scrollbar-hover 1s ease-in-out;
+          animation: scrollbar-hover 1s ease-in-out;
 }
 
 body::-webkit-scrollbar-track {
   background-color: lightgray;
 }
 
+@-webkit-keyframes scrollbar-hover {
+  0% {
+    background-color: gray;
+  }
+  100% {
+    background-color: #7700ff;
+  }
+}
+
+@keyframes scrollbar-hover {
+  0% {
+    background-color: gray;
+  }
+  100% {
+    background-color: #7700ff;
+  }
+}
 main {
   width: 1120px;
 }
