--- a/estilo.scss
+++ b/estilo.scss
@@ -28,11 +28,25 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-thumb {
     border-radius: 11px;
-    background-color: $accent;
+    background-color: gray;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    animation: scrollbar-hover 1s ease-in-out;
 }
 
 body::-webkit-scrollbar-track {
     background-color: lightgray;
+}
+
+@keyframes scrollbar-hover {
+    0% {
+        background-color: gray;
+    }
+
+    100% {
+        background-color: $accent;
+    }
 }
 
 main {
