--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* Variables */
+
+:root {
+    --primary-color: #0A88A4;
+    --secondary-color: #3EC0DD;
+    --bg-color: #F9FAFB;
+}
+
 /********** INITIALS **********/
 
 * {
@@ -15,18 +23,22 @@ html {
 }
 
 body {
-    background-color: #fcfbff;
+    background-color: var(--bg-color);
     display: flex;
     justify-content: center;
 }
 
 body::-webkit-scrollbar {
-    width: 6px;
+    width: 7px;
 }
 
 body::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background-color: lightgray;
+    background-color: var(--primary-color);
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: var(--secondary-color);
 }
 
 main {
@@ -48,6 +60,11 @@ header {
     box-shadow: 0 1px 0 #ececec;
     max-width: 1120px;
     width: 100%;
+}
+
+header > div.logo > img{
+    height: 60px;
+    border-radius: 50%;
 }
 
 .nav-list {
@@ -82,11 +99,10 @@ section#home {
     border: none;
     width: 150px;
     padding: 10px;
-    background-color: #7700ff;
+    background-color: var(--primary-color);
     color: white;
     font-size: 18px;
     cursor: pointer;
-    opacity: 0.9;
     border-radius: 5px;
 }
 
@@ -95,7 +111,7 @@ section#home {
 }
 
 .home-info button:hover {
-    opacity: 1;
+    background-color: var(--secondary-color);
 }
 
 .home-img {
@@ -106,11 +122,7 @@ section#home {
 }
 
 .home-img img {
-    width: 200px;
-    height: 200px;
     animation: float 5s ease-in-out infinite;
-    box-shadow: 0 5px 10px gray;
-    border-radius: 50%;
 }
 
 @keyframes float {
@@ -121,6 +133,26 @@ section#home {
         transform: translateY(-30px);
     }
 }
+
+#skills {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 15px;
+    height: 100vh;
+
+}
+
+section#skills > div {
+    border: 1px dashed gray;
+}
+
+section#skills > h2 {
+    width: 100%;
+    text-align: center;
+}
+
 
 section#projects {
     height: calc(100vh + 80px);
