--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ section#home {
     font-size: 18px;
     cursor: pointer;
     border-radius: 5px;
+    transition: all 250ms ease-in-out;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0);
 }
 
 .home-info button a {
@@ -117,6 +119,7 @@ section#home {
 
 .home-info button:hover {
     background-color: var(--secondary-color);
+    box-shadow: 0 0 25px var(--primary-color);
 }
 
 .home-img {
