--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ button a {
     color: white;
 }
 
+button a:hover {
+    color: white;
+}
+
 button:hover {
     background-color: var(--secondary-color);
     box-shadow: 0 0 25px var(--primary-color);
